--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-2016.05.26
+Forked Version
+Update on 11/14/2016
+
 ====================
 Hat is a deep learning framework on top of Theano
 Characters:
@@ -12,9 +14,12 @@ Prerequisite:
 3. networkx (optional. for ploting graph)
    matplotlib
 
-Installation:
-$ pip install Hat
-(or you can install from source code)
-
 Examples:
 https://github.com/qiuqiangkong/Hat/tree/master/examples
+
+Installation:
+Original Version:
+$ pip install Hat
+(or you can install from source code)
+Revised Version:
+$ pip install git+https://github.com/ShenJiyuan/Hat.git
